packages/astro/e2e/fixtures/errors/src/pages/astro-frontmatter-syntax-error.astro
---
{
---
<h1>Testing bad JS in frontmatter</h1>